test05: added pixi, fixes for zsh, browser, themechanger might work now

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ source = ~/.config/autarky/current/theme/hyprland.conf
 
 # Application bindings
 $terminal = uwsm app -- kitty
-$browser = uwsm app -- chromium --new-window --ozone-platform=wayland
+$browser = uwsm app -- librewolf --new-window
 $webapp = $browser --app
 
 bind = SUPER, return, exec, $terminal
