test07: zsh colors now sorta ok, back to nvim colorschemes to go with it.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,6 +5,9 @@
 # The theme file will be symlinked to ~/.config/autarky/current/theme/kitty.conf
 include ~/.config/autarky/current/theme/kitty.conf
 
+# reload config
+map ctrl+shift+f5 load_config_file
+
 # Environment variables
 env TERM=xterm-256color
 
@@ -48,4 +51,4 @@ tab_bar_style hidden
 
 # Advanced
 shell_integration enabled
-allow_remote_control no
+allow_remote_control yes
