--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -24,17 +24,18 @@ $browser = uwsm app -- librewolf --new-window
 $webapp = $browser --app
 
 bind = SUPER, return, exec, $terminal
-bind = SUPER, F, exec, uwsm app -- nautilus --new-window
+bind = SUPER, T, exec, $terminal
+bind = SUPER, E, exec, uwsm app -- nautilus --new-window
 bind = SUPER, B, exec, $browser
 bind = SUPER, N, exec, $terminal -e nvim
-bind = SUPER, T, exec, $terminal -e btop
+bind = SUPER, P, exec, $terminal -e btop
 bind = SUPER, D, exec, $terminal -e lazydocker
 bind = SUPER, O, exec, uwsm app -- obsidian -disable-gpu
-bind = SUPER, slash, exec, uwsm app -- keepassxc
 
-bind = SUPER, A, exec, $webapp="https://chatgpt.com"
-bind = SUPER, Y, exec, $webapp="https://youtube.com/"
-bind = SUPER SHIFT, G, exec, $webapp="https://web.whatsapp.com/"
+bind = SUPER SHIFT, P, exec, uwsm app -- keepassxc
+bind = SUPER SHIFT, C, exec, $webapp="https://chatgpt.com"
+bind = SUPER SHIFT, Y, exec, $webapp="https://youtube.com/"
+bind = SUPER SHIFT, W, exec, $webapp="https://web.whatsapp.com/"
 
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
