--- a/default/hypr/bindings/utilities.conf
+++ b/default/hypr/bindings/utilities.conf
@@ -1,11 +1,11 @@
 # Launching
 bind = SUPER, space, exec, walker
-bind = SUPER, K, exec, ~/.local/share/autarky/bin/autarky-menu-keybindings
+bind = SUPER, slash, exec, ~/.local/share/autarky/bin/autarky-menu-keybindings
 
 # Aesthetics
 bind = SUPER SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
 bind = SUPER CTRL, SPACE, exec, ~/.local/share/autarky/bin/autarky-theme-bg-next
-bind = SUPER SHIFT CTRL, SPACE, exec, ~/.local/share/autarky/bin/autarky-theme-next
+bind = SUPER SHIFT CTRL, SPACE, exec, zsh ~/.local/share/autarky/bin/autarky-theme-next
 
 # Notifications
 bind = SUPER, comma, exec, makoctl dismiss
@@ -17,11 +17,6 @@ bind = SUPER, ESCAPE, exec, ~/.local/share/autarky/bin/autarky-menu-power
 
 # Toggle idling
 bind = SUPER CTRL, I, exec, ~/.local/share/autarky/bin/autarky-toggle-idle
-
-# Control Apple Display brightness
-bind = CTRL, F1, exec, ~/.local/share/autarky/bin/autarky-cmd-apple-display-brightness -5000
-bind = CTRL, F2, exec, ~/.local/share/autarky/bin/autarky-cmd-apple-display-brightness +5000
-bind = SHIFT CTRL, F2, exec, ~/.local/share/autarky/bin/autarky-cmd-apple-display-brightness +60000
 
 # Screenshots
 bind = , PRINT, exec, ~/.local/share/autarky/bin/autarky-cmd-screenshot
