--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#d8dee9
-border-color=#D8DEE9
-background-color=#2e3440
+text-color=#ece9e4
+border-color=#f2dcbb
+background-color=#2b1f1c
 width=420
 height=110
 padding=10
@@ -19,3 +19,4 @@ invisible=true
 
 [mode=do-not-disturb app-name=notify-send]
 invisible=false
+
