--- a/default/hypr/bindings/utilities.conf
+++ b/default/hypr/bindings/utilities.conf
@@ -4,7 +4,7 @@ bind = SUPER, slash, exec, ~/.local/share/autarky/bin/autarky-menu-keybindings
 
 # Aesthetics
 bind = SUPER SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
-bind = SUPER CTRL, SPACE, exec, ~/.local/share/autarky/bin/autarky-theme-bg-next
+bind = SUPER CTRL, SPACE, exec, zsh -ic '~/.local/share/autarky/bin/autarky-theme-bg-next'
 bind = SUPER SHIFT CTRL, SPACE, exec, zsh ~/.local/share/autarky/bin/autarky-theme-next
 
 # Notifications
