nvim soft-landing edits [updates to obsidian.nvim too], python-gobject added jic early in the install proc.

--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,36 +1,20 @@
-# Tokyo Night theme for Kitty
+foreground   #c3c8c0
+background   #102306
+cursor       #c3c8c0
 
-# Basic colors
-foreground #a9b1d6
-background #1a1b26
-
-# Cursor colors
-cursor #a9b1d6
-cursor_text_color #1a1b26
-
-# Selection colors
-selection_foreground #1a1b26
-selection_background #7aa2f7
-
-# The color table
-color0 #32344a
-color1 #f7768e
-color2 #9ece6a
-color3 #e0af68
-color4 #7aa2f7
-color5 #ad8ee6
-color6 #449dab
-color7 #787c99
-
-# Bright colors
-color8 #444b6a
-color9 #ff7a93
-color10 #b9f27c
-color11 #ff9e64
-color12 #7da6ff
-color13 #bb9af7
-color14 #0db9d7
-color15 #acb0d0
-
-# URL underline color when hovering with mouse
-url_color #7aa2f7
+color0       #102306 
+color8       #4b5a44
+color1       #54b423
+color9       #54b423
+color2       #40b97c
+color10      #40b97c
+color3       #81b1b5
+color11      #81b1b5
+color4       #4e67c0
+color12      #4e67c0
+color5       #1d27c4
+color13      #1d27c4
+color6       #bba7ae
+color14      #bba7ae
+color7       #c3c8c0
+color15      #c3c8c0
