--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#ece9e4
-border-color=#f2dcbb
-background-color=#2b1f1c
+text-color=#c3c8c0
+border-color=#bba7ae
+background-color=#102306
 width=420
 height=110
 padding=10
