cmus added. plugged mpv to color switches. minor edits with keybinds

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -31,6 +31,7 @@ bind = SUPER, N, exec, $terminal -e nvim
 bind = SUPER, P, exec, $terminal -e btop
 bind = SUPER, D, exec, $terminal -e lazydocker
 bind = SUPER, O, exec, uwsm app -- obsidian -disable-gpu
+bind = SUPER, Y, pin
 
 bind = SUPER SHIFT, P, exec, uwsm app -- keepassxc
 bind = SUPER SHIFT, C, exec, $webapp="https://chatgpt.com"
