--- a/default/hypr/bindings/utilities.conf
+++ b/default/hypr/bindings/utilities.conf
@@ -1,5 +1,5 @@
 # Launching
-bind = SUPER, space, exec, walker
+bind = SUPER, S, exec, walker
 bind = SUPER, slash, exec, ~/.local/share/autarky/bin/autarky-menu-keybindings
 
 # Aesthetics
