--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,20 +1,20 @@
-foreground   #c3c8c0
-background   #102306
-cursor       #c3c8c0
+foreground   #c8c2c2
+background   #240e0c
+cursor       #c8c2c2
 
-color0       #102306 
-color8       #4b5a44
-color1       #54b423
-color9       #54b423
-color2       #40b97c
-color10      #40b97c
-color3       #81b1b5
-color11      #81b1b5
-color4       #4e67c0
-color12      #4e67c0
-color5       #1d27c4
-color13      #1d27c4
-color6       #bba7ae
-color14      #bba7ae
-color7       #c3c8c0
-color15      #c3c8c0
+color0       #240e0c 
+color8       #5a4a48
+color1       #b64941
+color9       #b64941
+color2       #c6a79f
+color10      #c6a79f
+color3       #a7919e
+color11      #a7919e
+color4       #ab8086
+color12      #ab8086
+color5       #c6bebf
+color13      #c6bebf
+color6       #ad6c6e
+color14      #ad6c6e
+color7       #c8c2c2
+color15      #c8c2c2
