--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c3c8c0
-border-color=#bba7ae
-background-color=#102306
+text-color=#c8c2c2
+border-color=#ad6c6e
+background-color=#240e0c
 width=420
 height=110
 padding=10
