--- a/themes/light/kitty.conf
+++ b/themes/light/kitty.conf
@@ -1,42 +1,20 @@
-# Rose Pine theme for Kitty
+foreground   #3e3e3e
+background   #faf9f9
+cursor       #3e3e3e
 
-# Basic colors
-foreground #575279
-background #faf4ed
-
-# Cursor colors
-cursor #cecacd
-cursor_text_color #575279
-
-# Selection colors
-selection_foreground #575279
-selection_background #dfdad9
-
-# The color table
-color0 #f2e9e1
-color1 #b4637a
-color2 #286983
-color3 #ea9d34
-color4 #56949f
-color5 #907aa9
-color6 #d7827e
-color7 #575279
-
-# Bright colors
-color8 #9893a5
-color9 #b4637a
-color10 #286983
-color11 #ea9d34
-color12 #56949f
-color13 #907aa9
-color14 #d7827e
-color15 #575279
-
-# URL underline color when hovering with mouse
-url_color #56949f
-
-# Search colors
-mark1_foreground #797593
-mark1_background #f2e9e1
-mark2_foreground #faf4ed
-mark2_background #d7827e
+color0       #faf9f9 
+color8       #bbbaba
+color1       #ab9488
+color9       #ab9488
+color2       #c7a28b
+color10      #c7a28b
+color3       #a7a7a5
+color11      #a7a7a5
+color4       #7bb4c6
+color12      #7bb4c6
+color5       #9cbcc7
+color13      #9cbcc7
+color6       #c5c3c4
+color14      #c5c3c4
+color7       #3e3e3e
+color15      #3e3e3e
