--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -15,7 +15,7 @@ env TERM=xterm-256color
 font_family CaskaydiaMono Nerd Font
 bold_font CaskaydiaMono Nerd Font Bold
 italic_font CaskaydiaMono Nerd Font Italic
-font_size 9
+font_size 13
 
 # Window configuration
 window_padding_width 14
@@ -36,6 +36,12 @@ cursor_blink_interval 0
 
 # Scrollback
 scrollback_lines 2000
+
+scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback nvim -c 'set nobackup nowritebackup' -c 'set buftype=nofile' -c 'normal G'
+# better scrollback with fuzzy search.
+# This can eat all the scrollback and allows you to grep as in nvim.
 
 # Mouse
 mouse_hide_wait 3.0
