--- a/themes/light/mako.ini
+++ b/themes/light/mako.ini
@@ -1,6 +1,6 @@
-text-color=#575279
-border-color=#575279
-background-color=#faf4ed
+text-color=#3e3e3e
+border-color=#c5c3c4
+background-color=#faf9f9
 width=420
 height=110
 padding=10
@@ -19,3 +19,4 @@ invisible=true
 
 [mode=do-not-disturb app-name=notify-send]
 invisible=false
+
