librewolf to zen, waybar and mpv minor edits.

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ source = ~/.config/autarky/current/theme/hyprland.conf
 
 # Application bindings
 $terminal = uwsm app -- kitty
-$browser = uwsm app -- librewolf --new-window
+$browser = uwsm app -- zen-browser --new-window
 $webapp = $browser --app
 
 bind = SUPER, return, exec, $terminal
