--- a/config/mpv/input.conf
+++ b/config/mpv/input.conf
@@ -1,3 +1,10 @@
 e ignore
+
+# toggle osc to avoid showing it when cursor passes
 a script-message osc-visibility never
 Shift+a script-message osc-visibility auto
+
+# increase subtitle font size
+ALT+k add sub-scale +0.1
+# decrease subtitle font size
+ALT+j add sub-scale -0.1
