--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -48,8 +48,8 @@
     "on-click": "kitty -e btop"
   },
   "clock": {
-    "format": "{:%A %H:%M}",
-    "format-alt": "{:%d %B W%V %Y}",
+    "format": "Week {:%V %A %H:%M}",
+    "format-alt": "{:%d %B %Y}",
     "tooltip": false,
     "on-click-right": "~/.local/share/autarky/bin/autarky-cmd-tzupdate"
   },
