--- a/default/hypr/windows.conf
+++ b/default/hypr/windows.conf
@@ -26,7 +26,7 @@ windowrule = fullscreen, class:Screensaver
 # Just dash of opacity
 windowrule = opacity 0.97 0.9, class:.*
 windowrule = opacity 1 0.97, class:^(Chromium|chromium|google-chrome|google-chrome-unstable)$
-windowrule = opacity 1 0.97, class:^(Librewolf|librewolf)$
+windowrule = opacity 1 0.97, class:^(Zen-browser|zen-browser|Zen-Browser)$
 windowrule = opacity 1 1, initialTitle:^(youtube.com_/)$ # Youtube
 windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
 windowrule = opacity 1 1, class:^(com.libretro.RetroArch|steam)$
