minor cosmetic changes: fixed waybar tray, opacity rules, icon set

--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,20 +1,20 @@
-foreground   #c8c2c2
-background   #240e0c
-cursor       #c8c2c2
+foreground   #c9c6c5
+background   #271c19
+cursor       #c9c6c5
 
-color0       #240e0c 
-color8       #5a4a48
-color1       #b64941
-color9       #b64941
-color2       #c6a79f
-color10      #c6a79f
-color3       #a7919e
-color11      #a7919e
-color4       #ab8086
-color12      #ab8086
-color5       #c6bebf
-color13      #c6bebf
-color6       #ad6c6e
-color14      #ad6c6e
-color7       #c8c2c2
-color15      #c8c2c2
+color0       #271c19 
+color8       #5d5452
+color1       #c68e82
+color9       #c68e82
+color2       #c7a699
+color10      #c7a699
+color3       #616caa
+color11      #616caa
+color4       #837da9
+color12      #837da9
+color5       #a488a2
+color13      #a488a2
+color6       #ac6d7a
+color14      #ac6d7a
+color7       #c9c6c5
+color15      #c9c6c5
