--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -11,12 +11,13 @@
     "clock"
   ],
   "modules-right": [
-    "group/tray-expander",
+    // "group/tray-expander",
     "bluetooth",
     "network",
     "pulseaudio",
     "cpu",
-    "battery"
+    "battery",
+    "tray"
   ],
   "hyprland/workspaces": {
     "on-click": "activate",
@@ -106,21 +107,21 @@
       "default": ["", "", ""]
     }
   },
-  "group/tray-expander": {
-    "orientation": "inherit",
-    "drawer": {
-      "transition-duration": 600,
-      "children-class": "tray-group-item"
-    },
-    "modules": [
-      "custom/expand-icon",
-    "tray"
-    ]
-  },
-  "custom/expand-icon": {
-    "format": " ",
-    "tooltip": false
-  },
+  // "group/tray-expander": {
+  //   "orientation": "inherit",
+  //   "drawer": {
+  //     "transition-duration": 600,
+  //     "children-class": "tray-group-item"
+  //   },
+  //   "modules": [
+  //     "custom/expand-icon",
+  //   "tray"
+  //   ]
+  // },
+  // "custom/expand-icon": {
+  //   "format": " ",
+  //   "tooltip": false
+  // },
   "tray": {
     "icon-size": 12,
     "spacing": 12
