--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c8c2c2
-border-color=#ad6c6e
-background-color=#240e0c
+text-color=#c9c6c5
+border-color=#ac6d7a
+background-color=#271c19
 width=420
 height=110
 padding=10
