--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#240e0c
-timecode_color=#ab8086
-title_color=#ab8086
-time_pos_color=#ab8086
-buttons_color=#c6bebf
-small_buttonsL_color=#c6bebf
-small_buttonsR_color=#c6bebf
-top_buttons_color=#c6bebf
-held_element_color=#c8c2c2
-time_pos_outline_color=#240e0c
+background_color=#271c19
+timecode_color=#837da9
+title_color=#837da9
+time_pos_color=#837da9
+buttons_color=#a488a2
+small_buttonsL_color=#a488a2
+small_buttonsR_color=#a488a2
+top_buttons_color=#a488a2
+held_element_color=#c9c6c5
+time_pos_outline_color=#271c19
