zsh theme change + some wallpapers.

--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c9c6c5
-border-color=#ac6d7a
-background-color=#271c19
+text-color=#c7c4c2
+border-color=#7a95a9
+background-color=#21140e
 width=420
 height=110
 padding=10
