--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -11,13 +11,12 @@
     "clock"
   ],
   "modules-right": [
-    // "group/tray-expander",
+    "tray",
     "bluetooth",
     "network",
     "pulseaudio",
     "cpu",
-    "battery",
-    "tray"
+    "battery"
   ],
   "hyprland/workspaces": {
     "on-click": "activate",
@@ -44,6 +43,7 @@
     }
   },
   "cpu": {
+    "icon-size": 20,
     "interval": 5,
     "format": "󰍛",
     "on-click": "kitty -e btop"
@@ -55,6 +55,7 @@
     "on-click-right": "~/.local/share/autarky/bin/autarky-cmd-tzupdate"
   },
   "network": {
+    "icon-size": 20,
     "format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
     "format" : "{icon}",
     "format-wifi" : "{icon}",
@@ -68,6 +69,7 @@
     "on-click": "kitty --class=Impala -e impala"
   },
   "battery": {
+    "icon-size": 20,
     "format": "{capacity}% {icon}",
     "format-discharging": "{icon}",
     "format-charging":    "{icon}",
@@ -90,6 +92,7 @@
     }
   },
   "bluetooth": {
+    "icon-size": 20,
     "format": "",
     "format-disabled": "󰂲",
     "format-connected": "",
@@ -97,6 +100,7 @@
     "on-click": "blueberry"
   },
   "pulseaudio": {
+    "icon-size": 20,
     "format": "{icon}",
     "on-click": "kitty --class=Wiremix -e wiremix",
     "on-click-right": "pamixer -t",
@@ -123,7 +127,7 @@
   //   "tooltip": false
   // },
   "tray": {
-    "icon-size": 12,
+    "icon-size": 20,
     "spacing": 12
   }
 }
