--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,20 +1,20 @@
-foreground   #c9c6c5
-background   #271c19
-cursor       #c9c6c5
+foreground   #c7c4c2
+background   #21140e
+cursor       #c7c4c2
 
-color0       #271c19 
-color8       #5d5452
-color1       #c68e82
-color9       #c68e82
-color2       #c7a699
-color10      #c7a699
-color3       #616caa
-color11      #616caa
-color4       #837da9
-color12      #837da9
-color5       #a488a2
-color13      #a488a2
-color6       #ac6d7a
-color14      #ac6d7a
-color7       #c9c6c5
-color15      #c9c6c5
+color0       #21140e 
+color8       #584e4a
+color1       #aa6847
+color9       #aa6847
+color2       #aa8872
+color10      #aa8872
+color3       #aaa18b
+color11      #aaa18b
+color4       #c2bba2
+color12      #c2bba2
+color5       #a6a69e
+color13      #a6a69e
+color6       #7a95a9
+color14      #7a95a9
+color7       #c7c4c2
+color15      #c7c4c2
