--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#271c19
-timecode_color=#837da9
-title_color=#837da9
-time_pos_color=#837da9
-buttons_color=#a488a2
-small_buttonsL_color=#a488a2
-small_buttonsR_color=#a488a2
-top_buttons_color=#a488a2
-held_element_color=#c9c6c5
-time_pos_outline_color=#271c19
+background_color=#21140e
+timecode_color=#c2bba2
+title_color=#c2bba2
+time_pos_color=#c2bba2
+buttons_color=#a6a69e
+small_buttonsL_color=#a6a69e
+small_buttonsR_color=#a6a69e
+top_buttons_color=#a6a69e
+held_element_color=#c7c4c2
+time_pos_outline_color=#21140e
