nvim cpp, hypr keybinding list fix, some smaller hypr tweaks.

--- a/default/hypr/windows.conf
+++ b/default/hypr/windows.conf
@@ -24,7 +24,7 @@ windowrule = fullscreen, class:^(com.libretro.RetroArch)$
 windowrule = fullscreen, class:Screensaver
 
 # Just dash of opacity
-windowrule = opacity 0.97 0.9, class:.*
+# windowrule = opacity 0.97 0.9, class:.*
 windowrule = opacity 1 1, class:^(Chromium|chromium|google-chrome|google-chrome-unstable)$
 windowrule = opacity 1 0.97, class:^(?i)(zen|zen-browser)$
 windowrule = opacity 1 1, title:^.*YouTube.*$ # Youtube
