--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,20 +1,20 @@
-foreground   #c7c4c2
-background   #21140e
-cursor       #c7c4c2
+foreground   #c7c3c1
+background   #211007
+cursor       #c7c3c1
 
-color0       #21140e 
-color8       #584e4a
-color1       #aa6847
-color9       #aa6847
-color2       #aa8872
-color10      #aa8872
-color3       #aaa18b
-color11      #aaa18b
-color4       #c2bba2
-color12      #c2bba2
-color5       #a6a69e
-color13      #a6a69e
-color6       #7a95a9
-color14      #7a95a9
-color7       #c7c4c2
-color15      #c7c4c2
+color0       #211007 
+color8       #584b45
+color1       #aa5228
+color9       #aa5228
+color2       #aa7853
+color10      #aa7853
+color3       #aa9975
+color11      #aa9975
+color4       #c1bc98
+color12      #c1bc98
+color5       #a6a78e
+color13      #a6a78e
+color6       #6f96a4
+color14      #6f96a4
+color7       #c7c3c1
+color15      #c7c3c1
