--- a/themes/light/mako.ini
+++ b/themes/light/mako.ini
@@ -1,6 +1,6 @@
-text-color=#3e3e3e
-border-color=#c5c3c4
-background-color=#faf9f9
+text-color=#3f3e3e
+border-color=#9fa3a5
+background-color=#fcfbfb
 width=420
 height=110
 padding=10
