--- a/default/hypr/looknfeel.conf
+++ b/default/hypr/looknfeel.conf
@@ -43,7 +43,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = no, please :)
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -87,7 +87,7 @@ layerrule = noanim, selection
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    pseudotile = true # Master switch for pseudotiling.
     preserve_split = true # You probably want this
     force_split = 2 # Always split on the right
 }
@@ -95,6 +95,10 @@ dwindle {
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
+}
+
+cursor {
+  inactive_timeout = 2
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
