--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c7c4c2
-border-color=#7a95a9
-background-color=#21140e
+text-color=#c7c3c1
+border-color=#6f96a4
+background-color=#211007
 width=420
 height=110
 padding=10
