--- a/themes/light/kitty.conf
+++ b/themes/light/kitty.conf
@@ -1,20 +1,20 @@
-foreground   #3e3e3e
-background   #faf9f9
-cursor       #3e3e3e
+foreground   #3f3e3e
+background   #fcfbfb
+cursor       #3f3e3e
 
-color0       #faf9f9 
-color8       #bbbaba
-color1       #ab9488
-color9       #ab9488
-color2       #c7a28b
-color10      #c7a28b
-color3       #a7a7a5
-color11      #a7a7a5
-color4       #7bb4c6
-color12      #7bb4c6
-color5       #9cbcc7
-color13      #9cbcc7
-color6       #c5c3c4
-color14      #c5c3c4
-color7       #3e3e3e
-color15      #3e3e3e
+color0       #fcfbfb 
+color8       #bdbcbc
+color1       #c7b7b5
+color9       #c7b7b5
+color2       #c5a19b
+color10      #c5a19b
+color3       #ae867f
+color11      #ae867f
+color4       #769eaa
+color12      #769eaa
+color5       #5896aa
+color13      #5896aa
+color6       #9fa3a5
+color14      #9fa3a5
+color7       #3f3e3e
+color15      #3f3e3e
