--- a/themes/light/mpv.osc.conf
+++ b/themes/light/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#faf9f9
-timecode_color=#7bb4c6
-title_color=#7bb4c6
-time_pos_color=#7bb4c6
-buttons_color=#9cbcc7
-small_buttonsL_color=#9cbcc7
-small_buttonsR_color=#9cbcc7
-top_buttons_color=#9cbcc7
-held_element_color=#3e3e3e
-time_pos_outline_color=#faf9f9
+background_color=#fcfbfb
+timecode_color=#769eaa
+title_color=#769eaa
+time_pos_color=#769eaa
+buttons_color=#5896aa
+small_buttonsL_color=#5896aa
+small_buttonsR_color=#5896aa
+top_buttons_color=#5896aa
+held_element_color=#3f3e3e
+time_pos_outline_color=#fcfbfb
