nvim: oil,harpoon, cpp. autarky: rounded every pop-up.

--- a/default/hypr/windows.conf
+++ b/default/hypr/windows.conf
@@ -23,6 +23,8 @@ windowrule = fullscreen, class:^(com.libretro.RetroArch)$
 # Fullscreen screensaver
 windowrule = fullscreen, class:Screensaver
 
+windowrule = rounding 0, fullscreen:1
+
 # Just dash of opacity
 # windowrule = opacity 0.97 0.9, class:.*
 windowrule = opacity 1 1, class:^(Chromium|chromium|google-chrome|google-chrome-unstable)$
