--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,20 +1,20 @@
-foreground   #c7c3c1
-background   #211007
-cursor       #c7c3c1
+foreground   #c9c7c6
+background   #27201e
+cursor       #c9c7c6
 
-color0       #211007 
-color8       #584b45
-color1       #aa5228
-color9       #aa5228
-color2       #aa7853
-color10      #aa7853
-color3       #aa9975
-color11      #aa9975
-color4       #c1bc98
-color12      #c1bc98
-color5       #a6a78e
-color13      #a6a78e
-color6       #6f96a4
-color14      #6f96a4
-color7       #c7c3c1
-color15      #c7c3c1
+color0       #27201e 
+color8       #5d5756
+color1       #c5a498
+color9       #c5a498
+color2       #c7bbad
+color10      #c7bbad
+color3       #a4a19a
+color11      #a4a19a
+color4       #7193ae
+color12      #7193ae
+color5       #987fa8
+color13      #987fa8
+color6       #aa7e7e
+color14      #aa7e7e
+color7       #c9c7c6
+color15      #c9c7c6
