--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#211007
-timecode_color=#c1bc98
-title_color=#c1bc98
-time_pos_color=#c1bc98
-buttons_color=#a6a78e
-small_buttonsL_color=#a6a78e
-small_buttonsR_color=#a6a78e
-top_buttons_color=#a6a78e
-held_element_color=#c7c3c1
-time_pos_outline_color=#211007
+background_color=#27201e
+timecode_color=#7193ae
+title_color=#7193ae
+time_pos_color=#7193ae
+buttons_color=#987fa8
+small_buttonsL_color=#987fa8
+small_buttonsR_color=#987fa8
+top_buttons_color=#987fa8
+held_element_color=#c9c7c6
+time_pos_outline_color=#27201e
