--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c7c3c1
-border-color=#6f96a4
-background-color=#211007
+text-color=#c9c7c6
+border-color=#aa7e7e
+background-color=#27201e
 width=420
 height=110
 padding=10
@@ -10,6 +10,7 @@ anchor=top-right
 outer-margin=20
 default-timeout=5000
 max-icon-size=32
+border-radius=16
 
 [app-name=Spotify]
 invisible=1
