tmux config. tmux-nvim key-sharing restored. waybar style rework. color and border size normalization.

--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,20 +1,30 @@
-foreground   #c9c7c6
-background   #27201e
-cursor       #c9c7c6
+foreground   #c7c7c5
+background   #1f2119
+cursor       #c7c7c5
 
-color0       #27201e 
-color8       #5d5756
-color1       #c5a498
-color9       #c5a498
-color2       #c7bbad
-color10      #c7bbad
-color3       #a4a19a
-color11      #a4a19a
-color4       #7193ae
-color12      #7193ae
-color5       #987fa8
-color13      #987fa8
-color6       #aa7e7e
-color14      #aa7e7e
-color7       #c9c7c6
-color15      #c9c7c6
+color0       #1f2119
+color8       #575852
+color1       #9da882
+color9       #9da882
+color2       #92a95d
+color10      #92a95d
+color3       #5378aa
+color11      #5378aa
+color4       #7c84a9
+color12      #7c84a9
+color5       #968eaa
+color13      #968eaa
+color6       #a7a3a9
+color14      #a7a3a9
+color7       #c7c7c5
+color15      #c7c7c5
+
+active_border_color #9da882
+inactive_border_color #1f2119
+
+active_tab_background   #1f2119
+active_tab_foreground   #c7c7c5
+inactive_tab_background #1f2119
+inactive_tab_foreground #92a95d
+tab_bar_background      #1f2119
+tab_bar_foreground      #92a95d
