--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,16 +1,16 @@
-text-color=#c9c7c6
-border-color=#aa7e7e
-background-color=#27201e
+text-color=#c7c7c5
+border-color=#9da882
+background-color=#1f2119
 width=420
 height=110
 padding=10
-border-size=2
+border-size=3
 font=Liberation Sans 11
 anchor=top-right
 outer-margin=20
 default-timeout=5000
 max-icon-size=32
-border-radius=16
+border-radius=10
 
 [app-name=Spotify]
 invisible=1
