--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#27201e
-timecode_color=#7193ae
-title_color=#7193ae
-time_pos_color=#7193ae
-buttons_color=#987fa8
-small_buttonsL_color=#987fa8
-small_buttonsR_color=#987fa8
-top_buttons_color=#987fa8
-held_element_color=#c9c7c6
-time_pos_outline_color=#27201e
+background_color=#1f2119
+timecode_color=#7c84a9
+title_color=#7c84a9
+time_pos_color=#7c84a9
+buttons_color=#968eaa
+small_buttonsL_color=#968eaa
+small_buttonsR_color=#968eaa
+top_buttons_color=#968eaa
+held_element_color=#c7c7c5
+time_pos_outline_color=#1f2119
