--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,8 +1,6 @@
 # Kitty Configuration for Autarky
-# This configuration provides terminal emulation with Kitty
-
 # Import theme configuration
-# The theme file will be symlinked to ~/.config/autarky/current/theme/kitty.conf
+# The theme file is symlinked to ~/.config/autarky/current/theme/kitty.conf
 include ~/.config/autarky/current/theme/kitty.conf
 
 # reload config
@@ -15,22 +13,32 @@ env TERM=xterm-256color
 font_family CaskaydiaMono Nerd Font
 bold_font CaskaydiaMono Nerd Font Bold
 italic_font CaskaydiaMono Nerd Font Italic
-
-# install sudo pacman -S ttf-jetbrains-mono
-# font_family      family="JetBrainsMono Nerd Font Mono" style=Regular features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-# bold_font        family="JetBrainsMono Nerd Font Mono" style=Bold features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-# italic_font      family="JetBrainsMono Nerd Font Mono" style="Regular Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-# bold_italic_font family="JetBrainsMono Nerd Font Mono" style="Bold Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-# symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 font_size 13
+
+#font_family      family="JetBrainsMono Nerd Font Mono" style=Regular features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+#bold_font        family="JetBrainsMono Nerd Font Mono" style=Bold features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+#italic_font      family="JetBrainsMono Nerd Font Mono" style="Regular Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+#bold_italic_font family="JetBrainsMono Nerd Font Mono" style="Bold Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+#symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 
 # Window configuration
 window_padding_width 14
 hide_window_decorations yes
 background_opacity 0.98
+window_border_width 3.0
 
 # Key bindings
 map f11 toggle_fullscreen
+# Resize splits with Ctrl+Shift+Arrow keys
+map ctrl+shift+left  resize_window narrower 5
+map ctrl+shift+right resize_window wider 5
+map ctrl+shift+up    resize_window taller 5
+map ctrl+shift+down  resize_window shorter 5
+# vim-kitty-navigator keybinds
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+l kitten pass_keys.py right  ctrl+l
 
 # Performance settings
 repaint_delay 10
@@ -59,9 +67,11 @@ url_style curly
 enable_audio_bell no
 visual_bell_duration 0.0
 
-# Tab bar (disabled by default for minimal appearance)
-tab_bar_style hidden
+# Tabs
+tab_bar_style fade
+enabled_layouts horizontal,tall
 
 # Advanced
 shell_integration enabled
 allow_remote_control yes
+listen_on unix:@mykitty
