--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,23 +1,29 @@
 {
   "reload_style_on_change": true,
   "layer": "top",
-  "position": "top",
+  "exclusive": false,
+  "passthrough": false,
   "spacing": 0,
-  "height": 26,
-  "modules-left": [
+  "height": 43,
+  "modules-left": [],
+  "modules-center": [],
+  "modules-right": [
+    "group/blob",
+    "clock",
     "hyprland/workspaces"
   ],
-  "modules-center": [
-    "clock"
-  ],
-  "modules-right": [
-    "tray",
-    "bluetooth",
-    "network",
-    "pulseaudio",
-    "cpu",
-    "battery"
-  ],
+  "group/blob": {
+    "orientation": "horizontal",
+    "icon-size": 20,
+    "modules": [
+      "tray",
+      "bluetooth",
+      "network",
+      "pulseaudio",
+      "cpu",
+      "battery"
+    ]
+  },
   "hyprland/workspaces": {
     "on-click": "activate",
     "format": "{icon}",
@@ -111,21 +117,7 @@
       "default": ["", "", ""]
     }
   },
-  // "group/tray-expander": {
-  //   "orientation": "inherit",
-  //   "drawer": {
-  //     "transition-duration": 600,
-  //     "children-class": "tray-group-item"
-  //   },
-  //   "modules": [
-  //     "custom/expand-icon",
-  //   "tray"
-  //   ]
-  // },
-  // "custom/expand-icon": {
-  //   "format": " ",
-  //   "tooltip": false
-  // },
+
   "tray": {
     "icon-size": 20,
     "spacing": 12
