--- a/themes/dark/hyprland.conf
+++ b/themes/dark/hyprland.conf
@@ -1,3 +1,4 @@
 general {
-    col.active_border = rgba(7193aeee) rgba(aa7e7eee) 45deg
+    col.active_border = rgba(9da882ff)
+    col.inactive_border = rgba(57585288)
 }
