September Update (nvim, tmux, latex)
nvim changes to color handling, some documentation, and tmux fixed tmux
keybinds

tmux configuration and session-picker (3 sessions for now)

latex install now default (typst is almost the same hassle for a few
syntax benefits, plus it is not integrated anywhere yet)

starship ribbon format
file browser is now nemo, calendar opens proton.calendar

attempted to automate gtk-theme changes. There's so many nitpicks and 3
different coexisting packages so it is extremely fickle. Plus gtk-4
glitches a lot with nvidia (hence the nemo change)

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,9 +23,11 @@ $terminal = uwsm app -- kitty
 $browser = uwsm app -- zen-browser --new-window
 $webapp = $browser --app
 
-bind = SUPER, return, exec, $terminal
-bind = SUPER, T, exec, $terminal
-bind = SUPER, E, exec, uwsm app -- nautilus --new-window
+# bind = SUPER, return, exec, $terminal -e tmux
+# bind = SUPER, T, exec, $terminal -e tmux
+bind = SUPER, return, exec, kitty ~/.local/share/autarky/bin/autarky-session-pick
+bind = SUPER, T, exec, kitty ~/.local/share/autarky/bin/autarky-session-pick
+bind = SUPER, E, exec, uwsm app -- nemo --new-window
 bind = SUPER, B, exec, $browser
 bind = SUPER, N, exec, $terminal -e nvim
 bind = SUPER, P, exec, $terminal -e btop
@@ -50,7 +52,7 @@ bind = SUPER SHIFT, W, exec, $webapp="https://web.whatsapp.com/"
 input {
   # Use multiple keyboard layouts and switch between them with Alt + Space
   # kb_layout = us,dk
-  kb_options = compose:caps # ,grp:alt_space_toggle
+  # kb_options = compose:caps # ,grp:alt_space_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
