--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -3,9 +3,6 @@
 # The theme file is symlinked to ~/.config/autarky/current/theme/kitty.conf
 include ~/.config/autarky/current/theme/kitty.conf
 
-# reload config
-map ctrl+shift+f5 load_config_file
-
 # Environment variables
 env TERM=xterm-256color
 
@@ -22,23 +19,36 @@ font_size 13
 #symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 
 # Window configuration
-window_padding_width 14
+window_padding_width 15
+# kitty multiplexer mode:
+# window_padding_width 15 15 0
 hide_window_decorations yes
 background_opacity 0.98
 window_border_width 3.0
 
 # Key bindings
-map f11 toggle_fullscreen
+# reload config
+map ctrl+shift+f5 load_config_file
+map ctrl+shift+t none
+# tmux enable C-Tab
+# Reset existing mappings
+map ctrl+tab       none
+map ctrl+shift+tab none
+# Send Ctrl Tab and Ctrl + Shift + Tab for Tmux navigation
+map ctrl+tab send_text all \x1b[27;5;9~
+map ctrl+shift+tab send_text all \x1b[27;6;9~
+
+
 # Resize splits with Ctrl+Shift+Arrow keys
 map ctrl+shift+left  resize_window narrower 5
 map ctrl+shift+right resize_window wider 5
 map ctrl+shift+up    resize_window taller 5
 map ctrl+shift+down  resize_window shorter 5
 # vim-kitty-navigator keybinds
-map ctrl+j kitten pass_keys.py bottom ctrl+j
-map ctrl+k kitten pass_keys.py top    ctrl+k
-map ctrl+h kitten pass_keys.py left   ctrl+h
-map ctrl+l kitten pass_keys.py right  ctrl+l
+# map ctrl+j kitten pass_keys.py bottom ctrl+j
+# map ctrl+k kitten pass_keys.py top    ctrl+k
+# map ctrl+h kitten pass_keys.py left   ctrl+h
+# map ctrl+l kitten pass_keys.py right  ctrl+l
 
 # Performance settings
 repaint_delay 10
@@ -50,7 +60,7 @@ cursor_shape block
 cursor_blink_interval 0
 
 # Scrollback
-scrollback_lines 2000
+scrollback_lines 4000
 
 scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
@@ -67,11 +77,25 @@ url_style curly
 enable_audio_bell no
 visual_bell_duration 0.0
 
-# Tabs
-tab_bar_style fade
+# Tabs (kitty cannot re-attach easily, so back to tmux)
+tab_bar_style hidden
+# tab_bar_style powerline
+# tab_powerline_style angled
+tab_bar_style separator
+tab_separator "  "
+# tab_separator "  "
+# tab_bar_style fade
+# tab_fade 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1
 enabled_layouts horizontal,tall
+tab_bar_min_tabs 2
+tab_title_max_length 100
+active_tab_font_style normal
+tab_bar_font_size 25
+tab_bar_margin_width 10.0
+tab_bar_margin_height 15.0 0.0
 
 # Advanced
 shell_integration enabled
 allow_remote_control yes
-listen_on unix:@mykitty
+# kitty-vim-connection
+# listen_on unix:@mykitty
