--- a/default/hypr/windows.conf
+++ b/default/hypr/windows.conf
@@ -5,9 +5,9 @@ windowrule = suppressevent maximize, class:.*
 windowrule = tile, class:^(Chromium)$
 
 # Float and center settings and previews
-windowrule = float, class:^(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|Autarky|About)$
-windowrule = center, class:^(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|Autarky|About)$
-windowrule = size 800 600, class:^(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty)$
+windowrule = float, class:^(blueberry.py|Impala|Wiremix|Autarky|About)$
+windowrule = center, class:^(blueberry.py|Impala|Wiremix|Autarky|About)$
+windowrule = size 800 600, class:^(blueberry.py|Impala|Wiremix|com.gabm.satty)$
 windowrule = size 590 450, class:Autarky
 windowrule = size 700 470 class:About
 
@@ -30,7 +30,7 @@ windowrule = rounding 0, fullscreen:1
 windowrule = opacity 1 1, class:^(Chromium|chromium|google-chrome|google-chrome-unstable)$
 windowrule = opacity 1 0.97, class:^(?i)(zen|zen-browser)$
 windowrule = opacity 1 1, title:^.*YouTube.*$ # Youtube
-windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
+windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv)$
 windowrule = opacity 1 1, class:^(com.libretro.RetroArch|steam)$
 
 # Fix some dragging issues with XWayland
