--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -3,6 +3,10 @@
 set -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",xterm-256color:Tc"
 
+# set pre-set names for sessions
+if-shell "tmux has-session -t huemul 2>/dev/null" '' "new-session -d -s huemul"
+if-shell "tmux has-session -t pudu 2>/dev/null" '' "new-session -d -s pudu"
+
 # Use Ctrl-a instead of Ctrl-b as prefix (like GNU screen)
 unbind C-b
 set -g prefix C-a
@@ -20,12 +24,6 @@ bind -n M-Right resize-pane -R 4
 bind -n M-Up resize-pane -U 4
 bind -n M-Down resize-pane -D 4
 
-# Smart pane switching with vim-tmux-navigator
-# bind -n C-h select-pane -L
-# bind -n C-j select-pane -D
-# bind -n C-k select-pane -U
-# bind -n C-l select-pane -R
-
 # tabbing
 bind -n C-Tab select-window -n
 bind -n C-BTab select-window -p
@@ -33,17 +31,41 @@ bind -n C-BTab select-window -p
 # Enable mouse support
 set -g mouse on
 
-# Better status bar
-# set -g status-bg black
-# set -g status-fg white
-# set -g status-left-length 20
-# set -g status-right-length 100
-# set -g status-left '[#S]'
-# set -g status-right '%Y-%m-%d %H:%M '
-
 # Start windows and panes at 1 (not 0)
 set -g base-index 1
 setw -g pane-base-index 1
+
+# Status bar
+set -g status-position top
+set -g status-interval 5
+
+set -g status-style fg=yellow,bg=black
+set -g window-status-format "#[fg=red,bg=black]#[fg=black,bg=red] #W #[fg=red,bg=black]#[default]"
+
+set -g window-status-separator ""
+set -g window-status-current-format '\
+#(if [[ $(tmux display-message -p "#{window_index}") -eq 1 ]]; then\
+  printf "#[fg=black,bg=cyan]#[fg=black,bg=cyan] #W #[fg=cyan,bg=black]#[default]";\
+elif [[ $(tmux display-message -p "#{window_index}") -eq $(tmux list-windows | wc -l) ]]; then\
+  printf "#[fg=black,bg=cyan]#[fg=black,bg=cyan] #W #[fg=cyan,bg=black]#[default]";\
+else
+  printf "#[fg=black,bg=cyan]#[fg=black,bg=cyan] #W #[fg=cyan,bg=black]#[default]";\
+fi)'
+
+set -g status-left '\
+#(if [ $(tmux display-message -p "#{window_index}") -eq 1 ];\
+then printf "#[fg=black,bg=blue] [#S] #[fg=blue,bg=black]#[default]";\
+else printf "#[fg=black,bg=blue] [#S] #[fg=blue,bg=black]#[default]";\
+fi)'
+
+set -g status-left-length 30
+set -g status-right-length 100
+set -g message-style fg=blue,bg=black
+set -g message-command-style fg=blue,bg=black
+set -g mode-style fg=blue,bg=black
+set -g status-right '\
+#[fg=black,bg=red]#[fg=black,bg=red] #{host} #[fg=red,bg=black]\
+#[fg=black,bg=blue]#[fg=black,bg=blue] %b %-d %H:%M #[default]'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
