--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,30 +1,30 @@
-foreground   #c7c7c5
-background   #1f2119
-cursor       #c7c7c5
+foreground   #c9c8c8
+background   #272424
+cursor       #c9c8c8
 
-color0       #1f2119
-color8       #575852
-color1       #9da882
-color9       #9da882
-color2       #92a95d
-color10      #92a95d
-color3       #5378aa
-color11      #5378aa
-color4       #7c84a9
-color12      #7c84a9
-color5       #968eaa
-color13      #968eaa
-color6       #a7a3a9
-color14      #a7a3a9
-color7       #c7c7c5
-color15      #c7c7c5
+color0       #272424
+color8       #5d5a5a
+color1       #c7b7b5
+color9       #c7b7b5
+color2       #c5a19b
+color10      #c5a19b
+color3       #ae867f
+color11      #ae867f
+color4       #769eaa
+color12      #769eaa
+color5       #5896aa
+color13      #5896aa
+color6       #9fa3a5
+color14      #9fa3a5
+color7       #c9c8c8
+color15      #c9c8c8
 
-active_border_color #9da882
-inactive_border_color #1f2119
+active_border_color #c7b7b5
+inactive_border_color #272424
 
-active_tab_background   #1f2119
-active_tab_foreground   #c7c7c5
-inactive_tab_background #1f2119
-inactive_tab_foreground #92a95d
-tab_bar_background      #1f2119
-tab_bar_foreground      #92a95d
+active_tab_background   #272424
+active_tab_foreground   #c9c8c8
+inactive_tab_background #272424
+inactive_tab_foreground #c5a19b
+tab_bar_background      #272424
+tab_bar_foreground      #c5a19b
