--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c7c7c5
-border-color=#9da882
-background-color=#1f2119
+text-color=#c9c8c8
+border-color=#c7b7b5
+background-color=#272424
 width=420
 height=110
 padding=10
