--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -4,7 +4,7 @@
   "exclusive": false,
   "passthrough": false,
   "spacing": 0,
-  "height": 43,
+  "height": 30,
   "modules-left": [],
   "modules-center": [],
   "modules-right": [
@@ -38,14 +38,10 @@
       "7": "7",
       "8": "8",
       "9": "9",
-      "active": "󱓻"
+      "active": ""
     },
     "persistent-workspaces": {
       "1": [],
-      "2": [],
-      "3": [],
-      "4": [],
-      "5": []
     }
   },
   "cpu": {
@@ -55,9 +51,9 @@
     "on-click": "kitty -e btop"
   },
   "clock": {
-    "format": "Week {:%V %A %H:%M}",
-    "format-alt": "{:%d %B %Y}",
+    "format": "{:%b %d %H:%M}",
     "tooltip": false,
+    "on-click": "zen-browser 'https://calendar.proton.me/'",
     "on-click-right": "~/.local/share/autarky/bin/autarky-cmd-tzupdate"
   },
   "network": {
