--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#1f2119
-timecode_color=#7c84a9
-title_color=#7c84a9
-time_pos_color=#7c84a9
-buttons_color=#968eaa
-small_buttonsL_color=#968eaa
-small_buttonsR_color=#968eaa
-top_buttons_color=#968eaa
-held_element_color=#c7c7c5
-time_pos_outline_color=#1f2119
+background_color=#272424
+timecode_color=#769eaa
+title_color=#769eaa
+time_pos_color=#769eaa
+buttons_color=#5896aa
+small_buttonsL_color=#5896aa
+small_buttonsR_color=#5896aa
+top_buttons_color=#5896aa
+held_element_color=#c9c8c8
+time_pos_outline_color=#272424
