--- a/default/default.conf
+++ b/default/default.conf
@@ -1,12 +1,28 @@
 [ids]
-
 *
 
 [main]
-capslock = layer(interface)
+space = overload(interface, space)
+capslock = enter
+
+[global]
+overload_tap_timeout = 200
 
 [interface]
-j = enter
-h = backspace
-l = delete
-k = esc
+j = down
+h = left
+l = right
+k = up
+u = pagedown
+i = pageup
+y = end
+o = home
+
+w = up
+s = down
+a = left
+d = right
+q = pagedown
+e = pageup
+capslock = enter
+
