--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -3,18 +3,15 @@
 set -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",xterm-256color:Tc"
 
-# set pre-set names for sessions
-if-shell "tmux has-session -t huemul 2>/dev/null" '' "new-session -d -s huemul"
-if-shell "tmux has-session -t pudu 2>/dev/null" '' "new-session -d -s pudu"
-
 # Use Ctrl-a instead of Ctrl-b as prefix (like GNU screen)
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
 # Split panes
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
@@ -40,16 +37,16 @@ set -g status-position top
 set -g status-interval 5
 
 set -g status-style fg=yellow,bg=black
-set -g window-status-format "#[fg=red,bg=black]#[fg=black,bg=red] #W #[fg=red,bg=black]#[default]"
+set -g window-status-format "#[fg=cyan,bg=black]#[fg=black,bg=cyan] #W #[fg=cyan,bg=black]#[default]"
 
 set -g window-status-separator ""
 set -g window-status-current-format '\
 #(if [[ $(tmux display-message -p "#{window_index}") -eq 1 ]]; then\
-  printf "#[fg=black,bg=cyan]#[fg=black,bg=cyan] #W #[fg=cyan,bg=black]#[default]";\
+  printf "#[fg=black,bg=red]#[fg=black,bg=red] #W #[fg=red,bg=black]#[default]";\
 elif [[ $(tmux display-message -p "#{window_index}") -eq $(tmux list-windows | wc -l) ]]; then\
-  printf "#[fg=black,bg=cyan]#[fg=black,bg=cyan] #W #[fg=cyan,bg=black]#[default]";\
+  printf "#[fg=black,bg=red]#[fg=black,bg=red] #W #[fg=red,bg=black]#[default]";\
 else
-  printf "#[fg=black,bg=cyan]#[fg=black,bg=cyan] #W #[fg=cyan,bg=black]#[default]";\
+  printf "#[fg=black,bg=red]#[fg=black,bg=red] #W #[fg=red,bg=black]#[default]";\
 fi)'
 
 set -g status-left '\
