--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -37,7 +37,9 @@ map ctrl+shift+tab none
 # Send Ctrl Tab and Ctrl + Shift + Tab for Tmux navigation
 map ctrl+tab send_text all \x1b[27;5;9~
 map ctrl+shift+tab send_text all \x1b[27;6;9~
-
+# F13–F24 mappings
+# map shift+f1 send_text all \x1b[25~
+# map f13 send_text all \x1b[25~
 
 # Resize splits with Ctrl+Shift+Arrow keys
 map ctrl+shift+left  resize_window narrower 5
@@ -56,8 +58,9 @@ input_delay 3
 sync_to_monitor yes
 
 # Cursor configuration
-cursor_shape block
-cursor_blink_interval 0
+cursor_shape underline
+cursor_shape_unfocused unchanged
+cursor_blink_interval 1
 
 # Scrollback
 scrollback_lines 4000
