Nvim, tmux, system font
added nvim session manager, tmux session saver (for reboots)
cosmetics: changed system font where ever I could, might look horrible
on install but that's a corner kick I'll take next time.

--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,30 +1,30 @@
-foreground   #c9c8c8
-background   #272424
-cursor       #c9c8c8
+foreground   #c5c3c2
+background   #19100b
+cursor       #c5c3c2
 
-color0       #272424
-color8       #5d5a5a
-color1       #c7b7b5
-color9       #c7b7b5
-color2       #c5a19b
-color10      #c5a19b
-color3       #ae867f
-color11      #ae867f
-color4       #769eaa
-color12      #769eaa
-color5       #5896aa
-color13      #5896aa
-color6       #9fa3a5
-color14      #9fa3a5
-color7       #c9c8c8
-color15      #c9c8c8
+color0       #19100b
+color8       #6e615a
+color1       #aa5228
+color9       #aa5228
+color2       #aa7853
+color10      #aa7853
+color3       #aa9975
+color11      #aa9975
+color4       #c1bc98
+color12      #c1bc98
+color5       #a6a78e
+color13      #a6a78e
+color6       #6f96a4
+color14      #6f96a4
+color7       #c5c3c2
+color15      #c5c3c2
 
-active_border_color #c7b7b5
-inactive_border_color #272424
+active_border_color #aa5228
+inactive_border_color #19100b
 
-active_tab_background   #272424
-active_tab_foreground   #c9c8c8
-inactive_tab_background #272424
-inactive_tab_foreground #c5a19b
-tab_bar_background      #272424
-tab_bar_foreground      #c5a19b
+active_tab_background   #19100b
+active_tab_foreground   #c5c3c2
+inactive_tab_background #19100b
+inactive_tab_foreground #aa7853
+tab_bar_background      #19100b
+tab_bar_foreground      #aa7853
