--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#272424
-timecode_color=#769eaa
-title_color=#769eaa
-time_pos_color=#769eaa
-buttons_color=#5896aa
-small_buttonsL_color=#5896aa
-small_buttonsR_color=#5896aa
-top_buttons_color=#5896aa
-held_element_color=#c9c8c8
-time_pos_outline_color=#272424
+background_color=#19100b
+timecode_color=#c1bc98
+title_color=#c1bc98
+time_pos_color=#c1bc98
+buttons_color=#a6a78e
+small_buttonsL_color=#a6a78e
+small_buttonsR_color=#a6a78e
+top_buttons_color=#a6a78e
+held_element_color=#c5c3c2
+time_pos_outline_color=#19100b
