--- a/themes/light/kitty.conf
+++ b/themes/light/kitty.conf
@@ -1,9 +1,9 @@
-foreground   #3f3e3e
-background   #fcfbfb
-cursor       #3f3e3e
+foreground   #3d3d3d
+background   #f4f4f4
+cursor       #3d3d3d
 
-color0       #fcfbfb 
-color8       #bdbcbc
+color0       #f4f4f4
+color8       #b7b7b7
 color1       #c7b7b5
 color9       #c7b7b5
 color2       #c5a19b
@@ -16,5 +16,15 @@ color5       #5896aa
 color13      #5896aa
 color6       #9fa3a5
 color14      #9fa3a5
-color7       #3f3e3e
-color15      #3f3e3e
+color7       #3d3d3d
+color15      #3d3d3d
+
+active_border_color #c7b7b5
+inactive_border_color #f4f4f4
+
+active_tab_background   #f4f4f4
+active_tab_foreground   #3d3d3d
+inactive_tab_background #f4f4f4
+inactive_tab_foreground #c5a19b
+tab_bar_background      #f4f4f4
+tab_bar_foreground      #c5a19b
