--- a/themes/light/mpv.osc.conf
+++ b/themes/light/mpv.osc.conf
@@ -1,4 +1,4 @@
-background_color=#fcfbfb
+background_color=#f4f4f4
 timecode_color=#769eaa
 title_color=#769eaa
 time_pos_color=#769eaa
@@ -6,5 +6,5 @@ buttons_color=#5896aa
 small_buttonsL_color=#5896aa
 small_buttonsR_color=#5896aa
 top_buttons_color=#5896aa
-held_element_color=#3f3e3e
-time_pos_outline_color=#fcfbfb
+held_element_color=#3d3d3d
+time_pos_outline_color=#f4f4f4
