--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,16 +7,16 @@ include ~/.config/autarky/current/theme/kitty.conf
 env TERM=xterm-256color
 
 # Font configuration
-font_family CaskaydiaMono Nerd Font
-bold_font CaskaydiaMono Nerd Font Bold
-italic_font CaskaydiaMono Nerd Font Italic
+# font_family CaskaydiaMono Nerd Font
+# bold_font CaskaydiaMono Nerd Font Bold
+# italic_font CaskaydiaMono Nerd Font Italic
 font_size 13
 
-#font_family      family="JetBrainsMono Nerd Font Mono" style=Regular features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-#bold_font        family="JetBrainsMono Nerd Font Mono" style=Bold features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-#italic_font      family="JetBrainsMono Nerd Font Mono" style="Regular Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-#bold_italic_font family="JetBrainsMono Nerd Font Mono" style="Bold Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
-#symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
+font_family      family="JetBrainsMono Nerd Font Mono" style=Regular features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+bold_font        family="JetBrainsMono Nerd Font Mono" style=Bold features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+italic_font      family="JetBrainsMono Nerd Font Mono" style="Regular Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+bold_italic_font family="JetBrainsMono Nerd Font Mono" style="Bold Italic" features='+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20'
+symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b7,U+e700-U+e8ef,U+ed00-U+efc1,U+f000-U+f2ff,U+f000-U+f2e0,U+f300-U+f381,U+f400-U+f533,U+f0001-U+f1af0 Symbols Nerd Font Mono
 
 # Window configuration
 window_padding_width 15
