--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c9c8c8
-border-color=#c7b7b5
-background-color=#272424
+text-color=#c5c3c2
+border-color=#aa5228
+background-color=#19100b
 width=420
 height=110
 padding=10
