--- a/themes/light/hyprland.conf
+++ b/themes/light/hyprland.conf
@@ -1,3 +1,4 @@
 general {
-    col.active_border = rgba(769eaaee) rgba(9fa3a5ee) 45deg
+    col.active_border = rgba(769eaaff)
+    col.inactive_border = rgba(c7b7b5bf)
 }
