--- a/themes/light/mako.ini
+++ b/themes/light/mako.ini
@@ -1,15 +1,16 @@
-text-color=#3f3e3e
-border-color=#9fa3a5
-background-color=#fcfbfb
+text-color=#3d3d3d
+border-color=#c7b7b5
+background-color=#f4f4f4
 width=420
 height=110
 padding=10
-border-size=2
+border-size=3
 font=Liberation Sans 11
 anchor=top-right
 outer-margin=20
 default-timeout=5000
 max-icon-size=32
+border-radius=10
 
 [app-name=Spotify]
 invisible=1
