removed zoxide, back to full top waybar, remove omz ancillary files
useless with fzf and typically quantum leaps to wherever on typos or
similar named folders.
back to full top waybar bc waybar cannot selectively allow click-through
so transparent bits are dead-zones.

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -36,7 +36,8 @@ bind = SUPER, O, exec, uwsm app -- obsidian -disable-gpu
 bind = SUPER, Y, pin
 
 bind = SUPER SHIFT, P, exec, uwsm app -- keepassxc
-bind = SUPER SHIFT, C, exec, $webapp="https://chatgpt.com"
+bind = SUPER SHIFT, C, exec, $webapp="https://chatgpt.com/"
+bind = SUPER SHIFT, A, exec, $webapp="https://apod.nasa.gov/apod/"
 bind = SUPER SHIFT, Y, exec, $webapp="https://youtube.com/"
 bind = SUPER SHIFT, W, exec, $webapp="https://web.whatsapp.com/"
 
