--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#19100b
-timecode_color=#c1bc98
-title_color=#c1bc98
-time_pos_color=#c1bc98
-buttons_color=#a6a78e
-small_buttonsL_color=#a6a78e
-small_buttonsR_color=#a6a78e
-top_buttons_color=#a6a78e
-held_element_color=#c5c3c2
-time_pos_outline_color=#19100b
+background_color=#1d160c
+timecode_color=#aaa08f
+title_color=#aaa08f
+time_pos_color=#aaa08f
+buttons_color=#a8a8a5
+small_buttonsL_color=#a8a8a5
+small_buttonsR_color=#a8a8a5
+top_buttons_color=#a8a8a5
+held_element_color=#c6c4c2
+time_pos_outline_color=#1d160c
