--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,30 +1,30 @@
-foreground   #c5c3c2
-background   #19100b
-cursor       #c5c3c2
+foreground   #c6c4c2
+background   #1d160c
+cursor       #c6c4c2
 
-color0       #19100b
-color8       #6e615a
-color1       #aa5228
-color9       #aa5228
-color2       #aa7853
-color10      #aa7853
-color3       #aa9975
-color11      #aa9975
-color4       #c1bc98
-color12      #c1bc98
-color5       #a6a78e
-color13      #a6a78e
-color6       #6f96a4
-color14      #6f96a4
-color7       #c5c3c2
-color15      #c5c3c2
+color0       #1d160c
+color8       #70675c
+color1       #aa7e4e
+color9       #aa7e4e
+color2       #aa8c65
+color10      #aa8c65
+color3       #aa977a
+color11      #aa977a
+color4       #aaa08f
+color12      #aaa08f
+color5       #a8a8a5
+color13      #a8a8a5
+color6       #98a0aa
+color14      #98a0aa
+color7       #c6c4c2
+color15      #c6c4c2
 
-active_border_color #aa5228
-inactive_border_color #19100b
+active_border_color #aa7e4e
+inactive_border_color #1d160c
 
-active_tab_background   #19100b
-active_tab_foreground   #c5c3c2
-inactive_tab_background #19100b
-inactive_tab_foreground #aa7853
-tab_bar_background      #19100b
-tab_bar_foreground      #aa7853
+active_tab_background   #1d160c
+active_tab_foreground   #c6c4c2
+inactive_tab_background #1d160c
+inactive_tab_foreground #aa8c65
+tab_bar_background      #1d160c
+tab_bar_foreground      #aa8c65
