--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,10 +1,10 @@
-text-color=#c5c3c2
-border-color=#aa5228
-background-color=#19100b
+text-color=#c6c4c2
+border-color=#aa7e4e
+background-color=#1d160c
 width=420
 height=110
 padding=10
-border-size=3
+border-size=5
 font=Liberation Sans 11
 anchor=top-right
 outer-margin=20
