walker update (fixed breaking changes from yay -S)

--- a/default/default.conf
+++ b/default/default.conf
@@ -1,28 +1,34 @@
 [ids]
 *
+# 062a:8556 # MosArt USB Keyboard (redragon deimos K599), disables capslock, enables rightctrl lol
 
 [main]
+# leftctrl = leftctrl
+# rightctrl = rightctrl
+# rightctrl.down = rightctrl
+# rightctrl.up = rightctrl
+capslock = overload(interface, esc)
 space = overload(interface, space)
-capslock = enter
 
 [global]
-overload_tap_timeout = 200
+overload_tap_timeout = 400
 
 [interface]
+; = enter
+m = backspace
+, = delete
+
+k = up
 j = down
 h = left
 l = right
-k = up
-u = pagedown
-i = pageup
-y = end
-o = home
+n = timeout(pagedown, 400, end)
+p = timeout(pageup, 400, home)
 
 w = up
 s = down
 a = left
 d = right
-q = pagedown
-e = pageup
-capslock = enter
-
+e = timeout(pagedown, 400, end)
+q = timeout(pageup, 400, home)
+x = delete
