--- a/themes/light/mpv.osc.conf
+++ b/themes/light/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#f4f4f4
-timecode_color=#769eaa
-title_color=#769eaa
-time_pos_color=#769eaa
-buttons_color=#5896aa
-small_buttonsL_color=#5896aa
-small_buttonsR_color=#5896aa
-top_buttons_color=#5896aa
-held_element_color=#3d3d3d
-time_pos_outline_color=#f4f4f4
+background_color=#f2f3f4
+timecode_color=#628cc5
+title_color=#628cc5
+time_pos_color=#628cc5
+buttons_color=#c4c0c3
+small_buttonsL_color=#c4c0c3
+small_buttonsR_color=#c4c0c3
+top_buttons_color=#c4c0c3
+held_element_color=#3c3c3d
+time_pos_outline_color=#f2f3f4
