--- a/default/hypr/autostart.conf
+++ b/default/hypr/autostart.conf
@@ -5,5 +5,6 @@ exec-once = uwsm app -- fcitx5
 exec-once = uwsm app -- swaybg -i ~/.config/autarky/current/background -m fill
 exec-once = uwsm app -- swayosd-server
 exec-once = uwsm app -- walker --gapplication-service
+exec-once = uwsm app -- elephant
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = wl-clip-persist --clipboard regular --all-mime-type-regex '^(?!x-kde-passwordManagerHint).+'
