--- a/default/hypr/input.conf
+++ b/default/hypr/input.conf
@@ -15,7 +15,7 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# # https://wiki.hyprland.org/Configuring/Variables/#gestures
+# gestures {
+#     workspace_swipe = false
+# }
