--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c6c4c2
-border-color=#aa7e4e
-background-color=#1d160c
+text-color=#c5c3c2
+border-color=#aa5228
+background-color=#19100b
 width=420
 height=110
 padding=10
