--- a/themes/light/kitty.conf
+++ b/themes/light/kitty.conf
@@ -1,30 +1,30 @@
-foreground   #3d3d3d
-background   #f4f4f4
-cursor       #3d3d3d
+foreground   #3c3c3d
+background   #f2f3f4
+cursor       #3c3c3d
 
-color0       #f4f4f4
-color8       #b7b7b7
-color1       #c7b7b5
-color9       #c7b7b5
-color2       #c5a19b
-color10      #c5a19b
-color3       #ae867f
-color11      #ae867f
-color4       #769eaa
-color12      #769eaa
-color5       #5896aa
-color13      #5896aa
-color6       #9fa3a5
-color14      #9fa3a5
-color7       #3d3d3d
-color15      #3d3d3d
+color0       #f2f3f4
+color8       #b5b6b7
+color1       #4797be
+color9       #4797be
+color2       #7fa5c7
+color10      #7fa5c7
+color3       #a2b3c5
+color11      #a2b3c5
+color4       #628cc5
+color12      #628cc5
+color5       #c4c0c3
+color13      #c4c0c3
+color6       #be6d74
+color14      #be6d74
+color7       #3c3c3d
+color15      #3c3c3d
 
-active_border_color #c7b7b5
-inactive_border_color #f4f4f4
+active_border_color #4797be
+inactive_border_color #f2f3f4
 
-active_tab_background   #f4f4f4
-active_tab_foreground   #3d3d3d
-inactive_tab_background #f4f4f4
-inactive_tab_foreground #c5a19b
-tab_bar_background      #f4f4f4
-tab_bar_foreground      #c5a19b
+active_tab_background   #f2f3f4
+active_tab_foreground   #3c3c3d
+inactive_tab_background #f2f3f4
+inactive_tab_foreground #7fa5c7
+tab_bar_background      #f2f3f4
+tab_bar_foreground      #7fa5c7
