--- a/themes/light/mako.ini
+++ b/themes/light/mako.ini
@@ -1,10 +1,10 @@
-text-color=#3d3d3d
-border-color=#c7b7b5
-background-color=#f4f4f4
+text-color=#3c3c3d
+border-color=#4797be
+background-color=#f2f3f4
 width=420
 height=110
 padding=10
-border-size=3
+border-size=5
 font=Liberation Sans 11
 anchor=top-right
 outer-margin=20
