--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,17 +1,17 @@
 {
   "reload_style_on_change": true,
-  "layer": "top",
-  "exclusive": false,
+  "layer": "bottom",
+  "exclusive": true,
   "passthrough": false,
   "spacing": 0,
   "height": 30,
-  "modules-left": [],
-  "modules-center": [],
-  "modules-right": [
+  "modules-left": [
     "group/blob",
     "clock",
     "hyprland/workspaces"
   ],
+  "modules-center": [],
+  "modules-right": [],
   "group/blob": {
     "orientation": "horizontal",
     "icon-size": 20,
@@ -38,10 +38,12 @@
       "7": "7",
       "8": "8",
       "9": "9",
-      "active": ""
+      "active": ""
     },
     "persistent-workspaces": {
       "1": [],
+      "2": [],
+      "3": []
     }
   },
   "cpu": {
