walker workarounds. more missing packages from install \(tmux plugins!\) neovim config.

--- a/default/default.conf
+++ b/default/default.conf
@@ -8,7 +8,7 @@
 # rightctrl.down = rightctrl
 # rightctrl.up = rightctrl
 capslock = overload(interface, esc)
-space = overload(interface, space)
+# space = overload(interface, space)
 
 [global]
 overload_tap_timeout = 400
@@ -16,7 +16,7 @@ overload_tap_timeout = 400
 [interface]
 ; = enter
 m = backspace
-, = delete
+, = backspace
 
 k = up
 j = down
