installation tweaks for retries. slimmer nvim.

--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,30 +1,30 @@
-foreground   #c5c3c2
-background   #19100b
-cursor       #c5c3c2
+foreground   #c8c7c7
+background   #262120
+cursor       #c8c7c7
 
-color0       #19100b
-color8       #6e615a
-color1       #aa5228
-color9       #aa5228
-color2       #aa7853
-color10      #aa7853
-color3       #aa9975
-color11      #aa9975
-color4       #c1bc98
-color12      #c1bc98
-color5       #a6a78e
-color13      #a6a78e
-color6       #6f96a4
-color14      #6f96a4
-color7       #c5c3c2
-color15      #c5c3c2
+color0       #262120
+color8       #5c5857
+color1       #c2aaa5
+color9       #c2aaa5
+color2       #c4bfbe
+color10      #c4bfbe
+color3       #8aa999
+color11      #8aa999
+color4       #8386aa
+color12      #8386aa
+color5       #a49fa7
+color13      #a49fa7
+color6       #ad9292
+color14      #ad9292
+color7       #c8c7c7
+color15      #c8c7c7
 
-active_border_color #aa5228
-inactive_border_color #19100b
+active_border_color #c2aaa5
+inactive_border_color #262120
 
-active_tab_background   #19100b
-active_tab_foreground   #c5c3c2
-inactive_tab_background #19100b
-inactive_tab_foreground #aa7853
-tab_bar_background      #19100b
-tab_bar_foreground      #aa7853
+active_tab_background   #262120
+active_tab_foreground   #c8c7c7
+inactive_tab_background #262120
+inactive_tab_foreground #c4bfbe
+tab_bar_background      #262120
+tab_bar_foreground      #c4bfbe
