--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#19100b
-timecode_color=#c1bc98
-title_color=#c1bc98
-time_pos_color=#c1bc98
-buttons_color=#a6a78e
-small_buttonsL_color=#a6a78e
-small_buttonsR_color=#a6a78e
-top_buttons_color=#a6a78e
-held_element_color=#c5c3c2
-time_pos_outline_color=#19100b
+background_color=#262120
+timecode_color=#8386aa
+title_color=#8386aa
+time_pos_color=#8386aa
+buttons_color=#a49fa7
+small_buttonsL_color=#a49fa7
+small_buttonsR_color=#a49fa7
+top_buttons_color=#a49fa7
+held_element_color=#c8c7c7
+time_pos_outline_color=#262120
