--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c5c3c2
-border-color=#aa5228
-background-color=#19100b
+text-color=#c8c7c7
+border-color=#c2aaa5
+background-color=#262120
 width=420
 height=110
 padding=10
