nvim, app preferences.
slimming nvim: removed dedicated codefolder plugin
app preferences: gnumeric instead of the whole libreoffice suite,
inkscape for diagrams/sketches

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ $webapp = $browser --app
 # bind = SUPER, T, exec, $terminal -e tmux
 bind = SUPER, return, exec, kitty ~/.local/share/autarky/bin/autarky-session-pick
 bind = SUPER, T, exec, kitty ~/.local/share/autarky/bin/autarky-session-pick
-bind = SUPER, E, exec, uwsm app -- nemo --new-window
+bind = SUPER, E, exec, uwsm app -- nautilus
 bind = SUPER, B, exec, $browser
 bind = SUPER, N, exec, $terminal -e nvim
 bind = SUPER, P, exec, $terminal -e btop
