--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -60,8 +60,11 @@ set -g status-right-length 100
 set -g message-style fg=blue,bg=black
 set -g message-command-style fg=blue,bg=black
 set -g mode-style fg=blue,bg=black
+# set -g status-right '\
+# #[fg=black,bg=red]#[fg=black,bg=red] #(hostname) #[fg=red,bg=black]\
+# #[fg=black,bg=blue]#[fg=black,bg=blue] %b %-d %H:%M #[default]'
+
 set -g status-right '\
-#[fg=black,bg=red]#[fg=black,bg=red] #{host} #[fg=red,bg=black]\
 #[fg=black,bg=blue]#[fg=black,bg=blue] %b %-d %H:%M #[default]'
 
 # List of plugins
