--- a/themes/dark/mpv.osc.conf
+++ b/themes/dark/mpv.osc.conf
@@ -1,10 +1,10 @@
-background_color=#262120
-timecode_color=#8386aa
-title_color=#8386aa
-time_pos_color=#8386aa
-buttons_color=#a49fa7
-small_buttonsL_color=#a49fa7
-small_buttonsR_color=#a49fa7
-top_buttons_color=#a49fa7
-held_element_color=#c8c7c7
-time_pos_outline_color=#262120
+background_color=#21190f
+timecode_color=#aaa292
+title_color=#aaa292
+time_pos_color=#aaa292
+buttons_color=#a8a8a6
+small_buttonsL_color=#a8a8a6
+small_buttonsR_color=#a8a8a6
+top_buttons_color=#a8a8a6
+held_element_color=#c7c5c3
+time_pos_outline_color=#21190f
