--- a/default/starship.toml
+++ b/default/starship.toml
@@ -3,7 +3,7 @@
 
 # Inserts a blank line between shell prompts
 add_newline = false
-format = '''$directory$pixi$git_branch$git_status$cmd_duration$fill
+format = '''$directory$pixi$git_branch$git_status$hostname$cmd_duration$fill
 '''
 right_format = ''''''
 
@@ -102,10 +102,10 @@ format = '$symbol($version)'
 disabled = true
 
 [hostname]
-disabled = true
+disabled = false
 ssh_only = false
-format = '[$ssh_symbol$hostname]($style) '
-style = 'bold red'
+format = '[ $ssh_symbol$hostname ]($style)'
+style = 'fg:black bg:cyan'
 
 [time]
 disabled = true
