--- a/themes/dark/kitty.conf
+++ b/themes/dark/kitty.conf
@@ -1,30 +1,30 @@
-foreground   #c8c7c7
-background   #262120
-cursor       #c8c7c7
+foreground   #c7c5c3
+background   #21190f
+cursor       #c7c5c3
 
-color0       #262120
-color8       #5c5857
-color1       #c2aaa5
-color9       #c2aaa5
-color2       #c4bfbe
-color10      #c4bfbe
-color3       #8aa999
-color11      #8aa999
-color4       #8386aa
-color12      #8386aa
-color5       #a49fa7
-color13      #a49fa7
-color6       #ad9292
-color14      #ad9292
-color7       #c8c7c7
-color15      #c8c7c7
+color0       #21190f
+color8       #58524b
+color1       #aa7f50
+color9       #aa7f50
+color2       #aa8e68
+color10      #aa8e68
+color3       #aa997e
+color11      #aa997e
+color4       #aaa292
+color12      #aaa292
+color5       #a8a8a6
+color13      #a8a8a6
+color6       #98a0aa
+color14      #98a0aa
+color7       #c7c5c3
+color15      #c7c5c3
 
-active_border_color #c2aaa5
-inactive_border_color #262120
+active_border_color #aa7f50
+inactive_border_color #21190f
 
-active_tab_background   #262120
-active_tab_foreground   #c8c7c7
-inactive_tab_background #262120
-inactive_tab_foreground #c4bfbe
-tab_bar_background      #262120
-tab_bar_foreground      #c4bfbe
+active_tab_background   #21190f
+active_tab_foreground   #c7c5c3
+inactive_tab_background #21190f
+inactive_tab_foreground #aa8e68
+tab_bar_background      #21190f
+tab_bar_foreground      #aa8e68
