--- a/themes/dark/mako.ini
+++ b/themes/dark/mako.ini
@@ -1,6 +1,6 @@
-text-color=#c8c7c7
-border-color=#c2aaa5
-background-color=#262120
+text-color=#c7c5c3
+border-color=#aa7f50
+background-color=#21190f
 width=420
 height=110
 padding=10
